# stereo_correspondence

./: CMakeLists.txt
doc/: CMakeLists.txt  DESIGN.txt  Doxyfile.in  EVENTS.txt  LICENSE  THREADS.txt  XMLBUILDER.txt
src/apps/: CMakeLists.txt  test_module.cpp  wrapper.cpp  yuri.cpp  yuri2.cpp  yuri_simple.cpp
src/apps/simple/: SimpleBuilder.cpp  SimpleBuilder.h
src/apps/wrapper/: WrapperLoader.cpp  WrapperLoader.h
src/apps/yuri/: try_conversion.cpp  try_conversion.h  yuri_listings.cpp  yuri_listings.h
src/modules/: CMakeLists.txt
src/modules/alsa_output/: AlsaOutput.cpp  AlsaOutput.h  CMakeLists.txt
src/modules/anaglyph/: Anaglyph.cpp  Anaglyph.h  CMakeLists.txt
src/modules/artnet/: ArtNet.cpp  ArtNet.h  ArtNetPacket.cpp  ArtNetPacket.h  CMakeLists.txt
src/modules/audio_gen/: CMakeLists.txt  SineGenerator.cpp  SineGenerator.h  register.cpp
src/modules/audio_latency/: AudioLatency.cpp  AudioLatency.h  CMakeLists.txt
src/modules/audio_noise/: AudioNoise.cpp  AudioNoise.h  CMakeLists.txt
src/modules/audio_visualization/: AudioVisualization.cpp  AudioVisualization.h  CMakeLists.txt
src/modules/avdecoder/: AVDecoder.cpp  AVDecoder.h  CMakeLists.txt
src/modules/avencoder/: AVEncoder.cpp  AVEncoder.h  CMakeLists.txt
src/modules/avscaler/: AVScaler.cpp  AVScaler.h  CMakeLists.txt
src/modules/bayer/: BayerVisualize.cpp  BayerVisualize.h  CMakeLists.txt
src/modules/black_white_generator/: BlackWhiteGenerator.cpp  BlackWhiteGenerator.h  CMakeLists.txt
src/modules/blank/: BlankGenerator.cpp  BlankGenerator.h  CMakeLists.txt
src/modules/color_key/: CMakeLists.txt  ColorKey.cpp  ColorKey.h
src/modules/color_picker/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  color_kernels.impl  common.cpp  common.h
src/modules/colors/: CMakeLists.txt  Contrast.cpp  Contrast.h  Saturate.cpp  Saturate.h  manipulate_colors.h  register.cpp
src/modules/combine/: CMakeLists.txt  Combine.cpp  Combine.h
src/modules/convert_planes/: CMakeLists.txt  ConvertPlanes.cpp  ConvertPlanes.h
src/modules/crop/: CMakeLists.txt  Crop.cpp  Crop.h
src/modules/cuda_asw/: CMakeLists.txt  CudaASW.cpp  CudaASW.h  asw.cu  asw.h
src/modules/cuda_sncc/: CMakeLists.txt  CudaSNCC.cpp  CudaSNCC.h  sncc.cu  sncc.h
src/modules/decklink/: CMakeLists.txt  DeckLink3DVideoFrame.cpp  DeckLink3DVideoFrame.h  DeckLinkAPI_wrapper.h  DeckLinkBase.cpp  DeckLinkBase.h  DeckLinkInput.cpp  DeckLinkInput.h  DeckLinkOutput.cpp  DeckLinkOutput.h  register.cpp
src/modules/decklink_input/: CMakeLists.txt  DeckLinkInput.cpp  DeckLinkInput.h
src/modules/decklink_output/: CMakeLists.txt  DeckLinkOutput.cpp  DeckLinkOutput.h
src/modules/delay/: CMakeLists.txt  Delay.cpp  Delay.h
src/modules/delta/: CMakeLists.txt  DeltaInput.cpp  DeltaInput.h
src/modules/diff/: CMakeLists.txt  Diff.cpp  Diff.h
src/modules/dimenco_out/: CMakeLists.txt  DimencoOut.cpp  DimencoOut.h
src/modules/dummy/: CMakeLists.txt  DummyModule.cpp  DummyModule.h
src/modules/dup/: CMakeLists.txt  Dup.cpp  Dup.h  dup_test.cpp
src/modules/dvb/: CMakeLists.txt  DVBSource.cpp  DVBSource.h
src/modules/dvsource/: CMakeLists.txt  DVSource.cpp  DVSource.h
src/modules/dxt_compress/: CMakeLists.txt  DXTCompress.cpp  DXTCompress.h  colourfit.h
src/modules/event_device/: CMakeLists.txt  EventDevice.cpp  EventDevice.h
src/modules/event_info/: CMakeLists.txt  EventDelay.cpp  EventDelay.h  EventDevice.cpp  EventDevice.h  EventInfo.cpp  EventInfo.h  EventTimer.cpp  EventTimer.h  EventToFrame.cpp  EventToFrame.h  EventValuePair.cpp  EventValuePair.h  PassEvent.cpp  PassEvent.h  register.cpp
src/modules/fade/: CMakeLists.txt  Fade.cpp  Fade.h
src/modules/fb_grab/: CMakeLists.txt  FrameBufferGrabber.cpp  FrameBufferGrabber.h
src/modules/fetcher/: CMakeLists.txt  Fetcher.cpp  Fetcher.h
src/modules/file_picker/: CMakeLists.txt  FilePicker.cpp  FilePicker.h
src/modules/filedump/: CMakeLists.txt  FileDump.cpp  FileDump.h
src/modules/flip/: CMakeLists.txt  Flip.cpp  Flip.h
src/modules/flycap/: CMakeLists.txt  FlyCap.cpp  FlyCap.h  flycap_c_helpers.h  flycap_defs.h  flycap_enumerate.cpp  register.cpp
src/modules/fps_fixer/: CMakeLists.txt  FpsFixer.cpp  FpsFixer.h
src/modules/frame_info/: CMakeLists.txt  FrameInfo.cpp  FrameInfo.h
src/modules/framebuffer/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h
src/modules/freetype/: CMakeLists.txt  RenderText.cpp  RenderText.h
src/modules/frei0r/: CMakeLists.txt  Frei0rBase.cpp  Frei0rBase.h  Frei0rMixer.cpp  Frei0rMixer.h  Frei0rSource.cpp  Frei0rSource.h  Frei0rWrapper.cpp  Frei0rWrapper.h  frei0r_module.h  frei0r_register.cpp
src/modules/glx_window/: CMakeLists.txt  GlxWindow.cpp  GlxWindow.h
src/modules/gphoto/: CMakeLists.txt  GPhoto.cpp  GPhoto.h
src/modules/gpujpeg/: CMakeLists.txt  GPUJpegBase.cpp  GPUJpegBase.h  GPUJpegDecoder.cpp  GPUJpegDecoder.h  GPUJpegEncoder.cpp  GPUJpegEncoder.h  register.cpp
src/modules/hdvsource/: CMakeLists.txt  HDVSource.cpp  HDVSource.h
src/modules/ieee1394/: CMakeLists.txt  DVSource.cpp  DVSource.h  HDVSource.cpp  HDVSource.h  IEEE1394SourceBase.cpp  IEEE1394SourceBase.h  register.cpp
src/modules/imagemagick/: CMakeLists.txt  ImageMagickSource.cpp  ImageMagickSource.h
src/modules/invert/: CMakeLists.txt  Invert.cpp  Invert.h
src/modules/irc_client/: CMakeLists.txt  IrcClient.cpp  IrcClient.h
src/modules/jack/: CMakeLists.txt  JackInput.cpp  JackInput.h  JackOutput.cpp  JackOutput.h  register.cpp
src/modules/jpeg/: CMakeLists.txt  JpegDecoder.cpp  JpegDecoder.h  JpegEncoder.cpp  JpegEncoder.h  jpeg_common.cpp  jpeg_common.h  register.cpp
src/modules/jpegdecoder/: CMakeLists.txt  JPEGDecoder.cpp  JPEGDecoder.h
src/modules/jpegencoder/: CMakeLists.txt  JPEGEncoder.cpp  JPEGEncoder.h
src/tests/: CMakeLists.txt  test_any.cpp  test_base.cpp  test_color.cpp  test_cuda.cu  test_filesystem.cpp  test_irange.cpp  test_main.cpp  test_make_list.cpp  test_parameters.cpp  test_register.cpp  test_state_table.cpp  test_string.cpp  test_string_generator.cpp  time_tests.cpp
src/yuri/: CMakeLists.txt  version.cpp.in  version.h
(+794 files in other folders)
